src/AddNodeToggleSwitch.scss
@import 'variables';

.AddNodeToggleSwitch {
    float: left;
    margin-top: 1rem;
    margin-right: 0.5rem;
    width: 3.6rem;
    background: #c4c4c4;
    border-radius: 1rem;
    padding: 0.2rem;
}

.AddNodeToggleSwitch:focus {
    box-shadow: 0 0 0 $c2lc-focus-indicator-width $c2lc-focus-indicator-color;
    outline: none;
}

.AddNodeToggleSwitch--checked {
    background: #000;
}

.AddNodeToggleSwitch--checked > div {
    margin-left: 1.6rem;
}

.AddNodeToggleSwitch__switch-inner-circle {
    background: #F1F1F1;
    height: 1.6rem;
    width: 1.6rem;
    border-radius: 50%;
    padding: 0.3rem;
}

.AddNodeToggleSwitch__switch-inner-circle svg {
    display: block;
    stroke: #000;
}

